# ML-Quant-Research-OS

./: .gitignore  123.py  AGENTS.md  README.md  appsettings.json  init_repo.py  jq_strategy_port_and_readme_01d4e167.plan.md  pyproject.toml  requirements.txt  start_local.cmd  start_shared.cmd
archive/: strategy_reference.py
configs/: subagent_policy.yaml  subagent_roles.yaml  tool_allowlist.yaml
dashboard/: app.py
docs/: AGENTS.md  ARCHITECTURE_REDESIGN_PROPOSAL.md  DATA_PIPELINE.md  DECISIONS.md  DECISION_LOG.md  EXCEL_CONSOLE_MVP.md  FAILURE_MODES.md  NORTH_STAR_ROADMAP.md  PLAIN_LANGUAGE_GLOSSARY.md  RESEARCH_PROMOTION_RULES.md  RESPONSE_CONTRACT.md  ROADMAP_AUTONOMOUS_RESEARCH.md  SUBAGENT_OPERATING_MODEL.md  SUPERAGENT_ARCHITECTURE_REDESIGN.md  SYSTEM_AUDIT.md  SYSTEM_BLUEPRINT.md  TOOLING_LEDGER.md  VISUAL_AUTONOMOUS_RESEARCH_OS.md  factors.md  strategy_spec_limit_up_screening.md
packaging/: platform_api.spec
quant_mvp/: AGENTS.md  __init__.py  backend_adapters.py  backtest_engine.py  cli.py  config.py  config_schema.py  coverage_recovery.py  data_quality.py  db.py  excel_export.py  experiment_graph.py  f1_pipeline.py  f1_verify.py  f2_pipeline.py  f2_verify.py  factors.py  networking.py  project.py  project_identity.py  promotion.py  r1_pipeline.py  ranking.py  reporting.py  research_audit.py  research_core.py  research_readiness.py  security_master.py  selection.py  strategy_campaign.py  strategy_diagnostics.py  strategy_schema.py  universe.py  universe_profiles.py
scripts/: AGENTS.md  audit_db.py  build_platform.ps1  generate_rank.py  run_backtest.py  run_f2_variant.py  run_limit_up_screening.py  strategy_jq.py  update_bars.py
tests/: AGENTS.md  conftest.py  test_config_manifest.py  (+43 more)
(+215 files in other folders)
