[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-ml-mvp"
version = "0.1.0"
description = "Reproducible quant ML + backtesting MVP"
requires-python = ">=3.10"
dependencies = [
    "akshare",
    "matplotlib",
    "numpy",
    "openpyxl>=3.1,<4",
    "pandas",
    "pyarrow",
    "pydantic>=2,<3",
    "scikit-learn>=1.5,<2",
    "tqdm",
]

[project.scripts]
quant-mvp = "quant_mvp.cli:main"

[tool.setuptools.packages.find]
include = ["quant_mvp", "quant_mvp.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scripts/legacy"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
